# TTBar

./: LICENSE  README.md  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  search.rs
src/js/: app.js  keyboard.js  results.js  search.js
src/styles/: animations.css  main.css  theme.css
