[package]
name = "ttbar"
version = "0.1.0"
description = "A lightning-fast app launcher for Windows 11"
authors = ["TTBar Contributors"]
edition = "2021"

[lib]
name = "ttbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
lnk = "0.5"
fuzzy-matcher = "0.3"
open = "5.3"
